// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dictionary flow dispatches the correct action and payload Find Item word and its score are found in database 1`] = `
Array [
  Object {
    "payload": "busch",
    "type": "DICTIONARY_ITEM_FIND",
  },
  Object {
    "payload": "busch",
    "type": "FETCH_WORD",
  },
  Object {
    "payload": Array [
      Noun {
        "_created": 2018-11-20T18:53:31.633Z,
        "_gender": "m",
        "_id": "Busch",
        "_isModified": false,
        "_ru": "куст",
        "_ruOptions": null,
      },
      Score {
        "_count": 2,
        "_id": "Busch",
        "_isModified": false,
        "_viewed": null,
      },
    ],
    "type": "FETCH_WORD_SUCCESS",
  },
  Object {
    "payload": Object {
      "Busch": Object {
        "articleScore": Score {
          "_count": 2,
          "_id": "Busch",
          "_isModified": false,
          "_viewed": null,
        },
        "word": Noun {
          "_created": 2018-11-20T18:53:31.633Z,
          "_gender": "m",
          "_id": "Busch",
          "_isModified": false,
          "_ru": "куст",
          "_ruOptions": null,
        },
      },
    },
    "type": "DICTIONARY_UPDATED",
  },
  Object {
    "payload": "Busch",
    "type": "DICTIONARY_ITEM_FOUND",
  },
]
`;

exports[`dictionary flow dispatches the correct action and payload Find Item word is found in Yandex 1`] = `
Array [
  Object {
    "payload": "fenster",
    "type": "DICTIONARY_ITEM_FIND",
  },
  Object {
    "payload": "fenster",
    "type": "FETCH_WORD",
  },
  Object {
    "payload": Array [
      Noun {
        "_created": 2018-11-20T18:53:31.633Z,
        "_gender": "n",
        "_id": "Fenster",
        "_isModified": false,
        "_ru": "окно",
        "_ruOptions": Array [
          "окно",
        ],
      },
    ],
    "type": "FETCH_WORD_SUCCESS",
  },
  Object {
    "payload": Object {
      "Fenster": Object {
        "word": Noun {
          "_created": 2018-11-20T18:53:31.633Z,
          "_gender": "n",
          "_id": "Fenster",
          "_isModified": false,
          "_ru": "окно",
          "_ruOptions": Array [
            "окно",
          ],
        },
      },
    },
    "type": "DICTIONARY_UPDATED",
  },
  Object {
    "payload": "Fenster",
    "type": "DICTIONARY_ITEM_FOUND",
  },
]
`;

exports[`dictionary flow dispatches the correct action and payload Find Item word is not found in any source 1`] = `
Array [
  Object {
    "payload": "Buch",
    "type": "DICTIONARY_ITEM_FIND",
  },
  Object {
    "payload": "Buch",
    "type": "FETCH_WORD",
  },
  Object {
    "payload": "Buch",
    "type": "FETCH_WORD_NOT_FOUND",
  },
  Object {
    "payload": false,
    "type": "DICTIONARY_ITEM_FOUND",
  },
]
`;

exports[`dictionary flow dispatches the correct action and payload Save Dict Items flow dispatches the correct action and payload noun and score are saved successfully 1`] = `
Array [
  Object {
    "payload": Array [
      Noun {
        "_created": 2018-11-20T18:53:31.633Z,
        "_gender": "m",
        "_id": "Tisch",
        "_isModified": false,
        "_ru": "стол",
        "_ruOptions": null,
      },
      Score {
        "_count": 5,
        "_id": "Tisch",
        "_isModified": false,
        "_viewed": null,
      },
    ],
    "type": "DICTIONARY_ITEMS_SAVE",
  },
  Object {
    "payload": Array [
      Noun {
        "_created": 2018-11-20T18:53:31.633Z,
        "_gender": "m",
        "_id": "Tisch",
        "_isModified": false,
        "_ru": "стол",
        "_ruOptions": null,
      },
      Score {
        "_count": 5,
        "_id": "Tisch",
        "_isModified": false,
        "_viewed": null,
      },
    ],
    "type": "DICTIONARY_UPDATE",
  },
  Object {
    "payload": Object {
      "Tisch": Object {
        "articleScore": Score {
          "_count": 5,
          "_id": "Tisch",
          "_isModified": false,
          "_viewed": null,
        },
        "word": Noun {
          "_created": 2018-11-20T18:53:31.633Z,
          "_gender": "m",
          "_id": "Tisch",
          "_isModified": false,
          "_ru": "стол",
          "_ruOptions": null,
        },
      },
    },
    "type": "DICTIONARY_UPDATED",
  },
  Object {
    "type": "DICTIONARY_SYNC",
  },
  Object {
    "payload": Noun {
      "_created": 2018-11-20T18:53:31.633Z,
      "_gender": "m",
      "_id": "Tisch",
      "_isModified": false,
      "_ru": "стол",
      "_ruOptions": null,
    },
    "service": NounService {
      "add": [Function],
      "collection": null,
      "db": null,
      "fetchExact": [Function],
    },
    "type": "SAVE_ENTITY",
  },
  Object {
    "payload": Score {
      "_count": 5,
      "_id": "Tisch",
      "_isModified": false,
      "_viewed": null,
    },
    "service": ScoreService {
      "add": [Function],
      "collection": null,
      "db": null,
      "fetchExact": [Function],
    },
    "type": "SAVE_ENTITY",
  },
  Object {
    "payload": Noun {
      "_created": 2018-11-20T18:53:31.633Z,
      "_gender": "m",
      "_id": "Tisch",
      "_isModified": false,
      "_ru": "стол",
      "_ruOptions": null,
    },
    "type": "SAVE_ENTITY_SUCCESS",
  },
  Object {
    "payload": Score {
      "_count": 5,
      "_id": "Tisch",
      "_isModified": false,
      "_viewed": null,
    },
    "type": "SAVE_ENTITY_SUCCESS",
  },
  Object {
    "payload": "Tisch",
    "type": "DICTIONARY_SYNCED",
  },
  Object {
    "type": "DICTIONARY_ITEMS_SAVED",
  },
]
`;

exports[`dictionary flow dispatches the correct action and payload Save Dict Items flow dispatches the correct action and payload noun saved successfully 1`] = `
Array [
  Object {
    "payload": Array [
      Noun {
        "_created": 2018-11-20T18:53:31.633Z,
        "_gender": "m",
        "_id": "Tisch",
        "_isModified": false,
        "_ru": "стол",
        "_ruOptions": null,
      },
      Score {
        "_count": 5,
        "_id": "Tisch",
        "_isModified": false,
        "_viewed": null,
      },
    ],
    "type": "DICTIONARY_ITEMS_SAVE",
  },
  Object {
    "payload": Array [
      Noun {
        "_created": 2018-11-20T18:53:31.633Z,
        "_gender": "m",
        "_id": "Tisch",
        "_isModified": false,
        "_ru": "стол",
        "_ruOptions": null,
      },
      Score {
        "_count": 5,
        "_id": "Tisch",
        "_isModified": false,
        "_viewed": null,
      },
    ],
    "type": "DICTIONARY_UPDATE",
  },
  Object {
    "payload": Object {
      "Tisch": Object {
        "articleScore": Score {
          "_count": 5,
          "_id": "Tisch",
          "_isModified": false,
          "_viewed": null,
        },
        "word": Noun {
          "_created": 2018-11-20T18:53:31.633Z,
          "_gender": "m",
          "_id": "Tisch",
          "_isModified": false,
          "_ru": "стол",
          "_ruOptions": null,
        },
      },
    },
    "type": "DICTIONARY_UPDATED",
  },
  Object {
    "type": "DICTIONARY_SYNC",
  },
  Object {
    "payload": Noun {
      "_created": 2018-11-20T18:53:31.633Z,
      "_gender": "m",
      "_id": "Tisch",
      "_isModified": false,
      "_ru": "стол",
      "_ruOptions": null,
    },
    "service": NounService {
      "add": [Function],
      "collection": null,
      "db": null,
      "fetchExact": [Function],
    },
    "type": "SAVE_ENTITY",
  },
  Object {
    "payload": Noun {
      "_created": 2018-11-20T18:53:31.633Z,
      "_gender": "m",
      "_id": "Tisch",
      "_isModified": false,
      "_ru": "стол",
      "_ruOptions": null,
    },
    "type": "SAVE_ENTITY_SUCCESS",
  },
  Object {
    "payload": "Tisch",
    "type": "DICTIONARY_SYNCED",
  },
  Object {
    "type": "DICTIONARY_ITEMS_SAVED",
  },
]
`;

exports[`dictionary flow dispatches the correct action and payload Save Dict Items flow dispatches the correct action and payload score saved successfully 1`] = `
Array [
  Object {
    "payload": Array [
      Noun {
        "_created": 2018-11-20T18:53:31.633Z,
        "_gender": "m",
        "_id": "Busch",
        "_isModified": false,
        "_ru": "куст",
        "_ruOptions": null,
      },
      Score {
        "_count": 2,
        "_id": "Busch",
        "_isModified": false,
        "_viewed": null,
      },
    ],
    "type": "DICTIONARY_ITEMS_SAVE",
  },
  Object {
    "payload": Array [
      Noun {
        "_created": 2018-11-20T18:53:31.633Z,
        "_gender": "m",
        "_id": "Busch",
        "_isModified": false,
        "_ru": "куст",
        "_ruOptions": null,
      },
      Score {
        "_count": 2,
        "_id": "Busch",
        "_isModified": false,
        "_viewed": null,
      },
    ],
    "type": "DICTIONARY_UPDATE",
  },
  Object {
    "payload": Object {
      "Busch": Object {
        "articleScore": Score {
          "_count": 2,
          "_id": "Busch",
          "_isModified": false,
          "_viewed": null,
        },
        "word": Noun {
          "_created": 2018-11-20T18:53:31.633Z,
          "_gender": "m",
          "_id": "Busch",
          "_isModified": false,
          "_ru": "куст",
          "_ruOptions": null,
        },
      },
    },
    "type": "DICTIONARY_UPDATED",
  },
  Object {
    "type": "DICTIONARY_SYNC",
  },
  Object {
    "payload": Score {
      "_count": 2,
      "_id": "Busch",
      "_isModified": false,
      "_viewed": null,
    },
    "service": ScoreService {
      "add": [Function],
      "collection": null,
      "db": null,
      "fetchExact": [Function],
    },
    "type": "SAVE_ENTITY",
  },
  Object {
    "payload": Score {
      "_count": 2,
      "_id": "Busch",
      "_isModified": false,
      "_viewed": null,
    },
    "type": "SAVE_ENTITY_SUCCESS",
  },
  Object {
    "payload": "Busch",
    "type": "DICTIONARY_SYNCED",
  },
  Object {
    "type": "DICTIONARY_ITEMS_SAVED",
  },
]
`;
